# FlowMatch-PdM

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  data-and-classifiers.md  environment.yml  final_execution.sh  flow_matching.py  launch.sh  metrics-and-stats.md  non_flowmatch_execution.sh  orchestrate.py  orchestrator_femto.py  orchestrator_xjtu.py  pipeline_state.json  pyproject.toml  requirements.txt  run_all.sh  run_evaluation.py  run_raw_baselines.sh  train_classifier.py  train_classifier_aug.py  train_generator.py  train_generator_raw.py
Src/: README.md
configs/: default_config.yaml  sweep_config.yaml  sweep_flowmatch_cmapss.yaml  sweep_flowmatch_femto.yaml
datasets/: cwru_data_loader.py  demadics_data_loader.py  paderborn_data_loader.py  rul_data_loader.py
docs/: 01_experiment_plan.md  02_architecture_and_math.md  03_result_logger.md  04_script_reference.md  HOW_TO_TRAIN.md  dataset_acquisition.md  diffusion-baseline.md  flow-matching.md  gan-vae-baselines.md
experiments/: exp1_scaling_study.py  exp2_frequency_ablation.py  exp3_solver_sensitivity.py  exp4_alternative_baselines.py  exp5_tstr_robustness.py  exp6_cross_dataset.py  exp7_failure_visualization.py  experiment_utils.py  run_all_experiments.py
flowmatchPdM/: flowmatch_pdm.py  flowmatch_pdm_raw_backup.py
notebooks/: 01_dataset_analysis.executed.ipynb  01_dataset_analysis.ipynb  02_TimeGAN_TimeVAE_Training.ipynb  03_Diffusion_Training.ipynb  04_CFM_Training_and_Results.ipynb  README.md
scripts/: check_results.py  profile_regressor_efficiency.py  resume_from.py
src/: README.md  baselines.py  (+4 more)
(+39 files in other folders)
